# c-rest-framework

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .valgrind.supp  ARCHITECTURE.md  CMakeLists.txt  Doxyfile  EXAMPLES.md  LICENSE-APACHE  LICENSE-MIT  README.md  USAGE.md  WASM.md  all_includes.txt  check_rules.ps1  load_test.sh  pcout.txt  pcout2005.txt  run_local_ci.sh  test_hang.py  vcpkg.json
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: ci.yml
cmake/modules/: EnsureSymbol.cmake
compliance-openapi-3-2-0/: client-sdk-cli.md  client-sdk.md  servers.md
examples/: CMakeLists.txt
examples/app_full_multi/: CMakeLists.txt  main.c
examples/app_graphql_api/: CMakeLists.txt  main.c
examples/app_hot_reload/: CMakeLists.txt  main.c
examples/app_http23/: CMakeLists.txt  main.c
examples/app_https_server/: CMakeLists.txt  main.c
examples/app_jwt_json_w/: CMakeLists.txt  main.c
examples/app_multi_process/: CMakeLists.txt  main.c
examples/app_node_style/: CMakeLists.txt  main.c
examples/app_openapi/: CMakeLists.txt  main.c
examples/app_server_sent_events_sse/: CMakeLists.txt  main.c
examples/app_template_engine/: CMakeLists.txt  main.c
examples/app_threaded/: CMakeLists.txt  main.c
examples/app_websockets/: CMakeLists.txt  main.c
examples/notes/: CMakeLists.txt  main.c  test_notes.c
examples/oauth2/: CMakeLists.txt  README.md
examples/oauth2/include/: oauth2_client.h  oauth2_server.h
examples/oauth2/src/: main.c  oauth2_client.c  oauth2_server.c
examples/oauth2/tests/: test_oauth2.c
include/: c_abstract_http.h  c_multiplatform.h  c_rest_base64.h  c_rest_client.h  c_rest_compression.h  c_rest_crypto.h  c_rest_endian.h  c_rest_error.h  c_rest_graphql.h  c_rest_hashmap.h  c_rest_hot_reload.h  c_rest_http23.h  c_rest_jwt_middleware.h  c_rest_list.h  c_rest_log.h  c_rest_mem.h  c_rest_middleware.h  c_rest_modality.h  c_rest_multipart.h  c_rest_openapi.h  c_rest_orm.h  c_rest_orm_crud.h  c_rest_orm_middleware.h  c_rest_parser.h  c_rest_platform.h  c_rest_pool.h  c_rest_rate_limit.h  c_rest_request.h  c_rest_response.h  c_rest_router.h  c_rest_sse.h  c_rest_str_utils.h  c_rest_string.h  c_rest_template.h  c_rest_time.h  c_rest_tls.h  c_rest_ts_queue.h  c_rest_websocket.h
scripts/: check_signatures.py  precommit_matrix.py  update_shields.py
src/: c_abstract_http_mock.c  c_orm_crud.c  c_orm_middleware.c  c_orm_mock.c  c_rest_base64.c  c_rest_compression.c  c_rest_crypto.c  c_rest_endian.c  c_rest_graphql.c  c_rest_hashmap.c  c_rest_hot_reload.c  c_rest_http23.c  c_rest_jwt_middleware.c  c_rest_list.c  c_rest_log.c  c_rest_mem.c  c_rest_openapi.c  c_rest_pool.c  c_rest_rate_limit.c  c_rest_sse.c  c_rest_str_utils.c  c_rest_string.c  c_rest_template.c  c_rest_time.c  c_rest_ts_queue.c  client.c  middleware.c  modality.c  modality_async.c  modality_greenthread.c  modality_message_passing.c  modality_multi_process.c  modality_multi_thread.c  modality_single_thread.c  modality_sync.c  multipart.c  parser.c  parser_cah.c  platform_dos.c  platform_posix.c  (+6 more)
tests/: CMakeLists.txt  greatest.h  test_base64.c  test_client.c  test_crypto.c  test_endian.c  test_full_multipart_form_streaming.c  test_graphql.c  test_hashmap.c  test_hot_reload.c  test_http23.c  test_jwt_json_web_tokens_authentication_middleware.c  test_list.c  test_log.c  test_main.c  test_mem.c  test_multipart.c  test_multiplatform.c  test_oauth2.c  test_openapi.c  test_orm_integration.c  test_parser.c  test_pool.c  test_protos.h  test_rate_limiting_throttling_middleware.c  test_request_response.c  test_response_compression_gzip_brotli.c  test_router.c  test_server_sent_events_sse.c  test_str_utils.c  test_string.c  test_template.c  test_time.c  test_tls_context.c  test_tls_integration.c  test_ts_queue.c  test_websocket.c
tests/certs/: server.crt  server.key
